# clib

./: .gitignore  CMakeLists.txt  README.md
include/openlibc/: compiler.h  dynamic-string.h  hash.h  hmap.h  list.h  queue.h  simap.h  smap.h  sset.h  svec.h  types.h  util.h  vector.h
src/: dynamic-string.c  hash.c  hmap.c  queue.c  simap.c  smap.c  sset.c  svec.c  util.c  vector.c
src/inc/: type-props.h  types.h  unaligned.h  util.h
